clean up and adding color class

--- a/Sixer/Base.lproj/Main.storyboard
+++ b/Sixer/Base.lproj/Main.storyboard
@@ -1088,7 +1088,7 @@
         <image name="reminder" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="2m3-in-CoE"/>
+        <segue reference="5nG-QP-dAx"/>
         <segue reference="Gvf-mf-uoJ"/>
         <segue reference="gqn-Wv-8Yb"/>
     </inferredMetricsTieBreakers>
